# Polynomial-Bot

./: .gitignore  Cargo.toml  README.md  config.toml  engine_config.toml  logging_config.toml  strategy_config.toml
benches/: full_path_benchmark.rs  order_book_benchmark.rs
logs/: polynomial.log.2026-01-26
src/: auth.rs  book.rs  bot_error.rs  buffer_pool.rs  client.rs  common.rs  config.rs  connection_manager.rs  context.rs  data_client.rs  data_engine.rs  decode.rs  dns_cache.rs  errors.rs  execute_egine.rs  fetcher.rs  fill.rs  http_config.rs  lib.rs  main.rs  orders.rs  rand.rs  rist_manager.rs  state.rs  stream.rs  types.rs  utils.rs
tests/: test.rs
