[package]
name = "polynomial"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.31", features = ["std"] }
anyhow = "1.0.100"
dashmap = "6.1.0"
serde_json = "1.0.149"
smol_str = "0.3.5"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.0", features = ["json"] }
rust_decimal = { version = "1.39.0", features = [
  "macros",
  "serde-float",
  "serde-with-str",
] }
tracing = "0.1.44"
rust_decimal_macros = "1.39.0"
rustls = { version = "0.23.36", default-features = false, features = [
  "ring",
  "std",
] }
tokio-tungstenite = { version = "0.28.0", features = [
  "native-tls",
  "handshake",
] }
webpki-roots = "1.0.5"
rand = "0.9.2"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
url = "2.5.8"
console-subscriber = "0.5.0"
bytes = "1.11.0"
rand_seeder = "0.4.0"
rand_pcg = "0.9.0"
tracing-subscriber = "0.3.22"

# Ethereum and crypto
alloy-primitives = { version = "1.5.2", features = ["serde"] }
alloy-sol-types = { version = "1.5.2", features = ["eip712-serde", "json"] }
alloy-signer = { version = "1.5.2", features = ["eip712"] }
alloy-signer-local = { version = "1.5.2", features = ["eip712"] }
reqwest = { version = "0.13.1", features = ["json", "gzip", "query"] }
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
simd-json = "0.17.0"
mockito = "1.7.1"
toml = "0.9.8"
dotenvy = "0.15.7"

[dependencies.uuid]
version = "1.20.0"
features = ["v4"]
